<resources>
    <string name="app_name"> Gestação Saudável </string>
    <string name="app_version"> v. 1.1 </string>
    <string name="app_company">© 2017 ScriptPoin</string>
    <string name="app_rights">Todos os direitos reservados.</string>
    <string name="logo_imagem_descricao">Logo Gestação Saudável</string>
    <string name="action_settings"> Logout </string>
    <string name="navigation_drawer_open"> Abrir menu </string>
    <string name="navigation_drawer_close"> Fechar menu </string>
    <string name="bg_listview_rosa">Background Rosa Gradiente</string>
    <string name="titulo_activity_login">Login</string>
    <string name="titulo_activity_cadastro">Cadastro</string>
    <string name="hint_campo_nome">Nome</string>
    <string name="hint_campo_usuario">Usuário</string>
    <string name="hint_campo_email">E-mail</string>
    <string name="hint_campo_senha">Senha</string>
    <string name="hint_campo_senha_confirmacao">Confirme sua senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="botao_registrar">Registrar</string>
    <string name="erro_nome_curto">Nome muito curto</string>
    <string name="erro_senha_curta">Senha muito curta</string>
    <string name="erro_nome_invalido">Nome inválido</string>
    <string name="erro_usuario_invalido_login">Informe um usuário com mais de 3 caracteres</string>
    <string name="erro_usuario_invalido_cadastro">Seu usuário deve conter mais de 3 caracteres</string>
    <string name="erro_email_invalido">E-mail inválido</string>
    <string name="erro_senha_incorreta">Senha incorreta</string>
    <string name="erro_senha_invalida">A senha deve conter mais de 4 caracteres</string>
    <string name="erro_confirmacao_senha">As senhas informadas não são iguais</string>
    <string name="erro_campo_obrigatorio">Este campo é obrigatório</string>
    <string name="erro_campo_obrigatorio_login_usuario">Informe seu usuário</string>
    <string name="erro_campo_obrigatorio_login_senha">Informe sua senha</string>
    <string name="permission_rationale">Permissões de contatos são necessárias para auto-completar e-mails.</string>
    <string name="tv_login_cadastrar">Não possui conta ?\nRegistre-se aqui.</string>
    <string name="tv_cadastro_texto_1">Criar conta</string>
    <string name="tv_cadastro_texto_2">Informe seus dados abaixo</string>
    <string name="duvidas_prenatal">Dúvidas do Pré-natal</string>
    <string name="orientacoes_sobre_parto">Orientações Sobre\no Parto</string>
    <string name="aleitamento_materno">Aleitamento Materno</string>
    <string name="resguardo">Período de Resguardo</string>
    <string name="data_consultas">Data das Consultas</string>
    <string name="caderneta_gestante">Caderneta Virtual\nda Gestante</string>
    <string-array name="duvidas_prenatal_menus">
        <item> 1º Trimestre de Gravidez </item>
        <item> 2º Trimestre de Gravidez </item>
        <item> 3º Trimestre de Gravidez </item>
        <item> Principais Queixas na Gestação </item>
        <item> Uso de Suplementos </item>
        <item> Vacinas </item>
        <item> Atividade Física </item>
        <item> Ganho de Peso </item>
        <item> Direitos da Mulher </item>
    </string-array>
    <string name="tempo_proximado_gravidez">Tempo Aproximado da Gravidez</string>
    <string name="tempo_proximado_gravidez_semanas">SEMANAS</string>
    <string name="tempo_proximado_gravidez_mes">MÊS</string>
    <string name="gravidez_duvidas_frequentes">Dúvidas Frequentes:</string>
    <string name="trimestre_mes_1">1</string>
    <string name="trimestre_mes_2">2</string>
    <string name="trimestre_mes_3">3</string>
    <string name="trimestre_mes_4">4</string>
    <string name="trimestre_mes_5">5</string>
    <string name="trimestre_mes_6">6</string>
    <string name="trimestre_mes_7">7</string>
    <string name="trimestre_mes_8">8</string>
    <string name="trimestre_mes_9">9</string>
    <string name="trimestre_1_titulo">Primeiro Trimestre</string>
    <string name="trimestre_1_imagem">Imagem do bebê no primeiro trimestre</string>
    <string name="trimestre_1_tempo_proximado">(de 0 à 13 semanas)</string>
    <string name="trimestre_1_mes_1">4 semanas e meia</string>
    <string name="trimestre_1_mes_2">9 semanas</string>
    <string name="trimestre_1_mes_3">13 semanas e meia</string>
    <string name="trimestre_2_titulo">Segundo Trimestre</string>
    <string name="trimestre_2_imagem">Imagem do bebê no segundo trimestre</string>
    <string name="trimestre_2_tempo_proximado">(de 14 à 27 semanas)</string>
    <string name="trimestre_2_mes_4">18 semanas</string>
    <string name="trimestre_2_mes_5">22 semanas e meia</string>
    <string name="trimestre_2_mes_6">27 semanas</string>
    <string name="trimestre_3_titulo">Terceiro Trimestre</string>
    <string name="trimestre_3_imagem">Imagem do bebê no terceiro trimestre</string>
    <string name="trimestre_3_tempo_proximado">(de 28 à 42 semanas)</string>
    <string name="trimestre_3_mes_7">31 semanas e meia</string>
    <string name="trimestre_3_mes_8">36 semanas</string>
    <string name="trimestre_3_mes_9">40 semanas e meia</string>
    <string name="queixas_gestacao_titulo">Principais Queixas na Gestação</string>
    <string name="queixas_gestacao_topico">Queixas mais frequentes durante a gestação</string>
    <string name="queixas_gestacao_topico_obs">A maioria das queixas são comuns no período da gestação, devido às alterações hormonais.</string>
    <string name="suplementos_titulo">Uso de Suplementos</string>
    <string name="suplementos_topico">Uso do Ácido Fólico e Sulfato Ferroso</string>
    <string name="suplementos">

                    <![CDATA[

                        <h4><font color="#8e376d"><strong> O uso do ácido fólico e sulfato ferroso são importantes ? </strong></font></h4>
                        <p> O ácido fólico é importante principalmente antes da gravidez e até o 3º mês de gravidez, pois irá ajudar na formação do tubo neural (estrutura que dá origem ao cérebro e a medula espinhal) da criança. </p>
                        <p> O Sulfato ferroso deve ser tomado durante toda a gestação e até 3 meses depois do parto, pois ajuda a prevenir anemias. </p>

                    ]]>

            </string>
    <string name="vacinas_titulo">Vacinas</string>
    <string name="vacinas_topico">Vacinas na Gestação</string>
    <string name="vacinas_topico_obs">A equipe de Saúde deverá orientar e aplicar as vacinas que cada gestante deve tomar. É importante levar o cartão das gestantes anteriores ou cartão de vacina para que seja avaliado o número de doses de cada vacina na gestação atual.</string>
    <string name="vacinas">

                    <![CDATA[

                        <h4><font color="#8e376d"><strong> Quais são as vacinas indicadas durante a gestação ? </strong></font></h4>
                        <p> <strong> • </strong> Hepatite B; </p>
                        <p> <strong> • </strong> Tétano: dT; </p>
                        <p> <strong> • </strong> dTpa; </p>
                        <p> <strong> • </strong> Influenza. </p>

                    ]]>

            </string>
    <string name="atividade_fisica_titulo">Atividade Física</string>
    <string name="atividade_fisica_topico">Exercício Físico</string>
    <string name="atividade_fisica">

                    <![CDATA[

                        <h4><font color="#8e376d"><strong> Qual o tipo de atividade física posso fazer ? </strong></font></h4>
                        <p> Durante as consultas, o enfermeiro e médico irão orientar qual a melhor atividade para o período gestacional, mas geralmente a caminhada é livre para todas as gestantes que não apresente problemas de saúde. </p>
                        <p> Os exercícios físicos são benéficos à saúde porque melhoram a circulação e a digestão, o apetite, a função intestinal, além de proporcionar relaxamento e um sono repousante. </p>

                    ]]>

            </string>
    <string name="ganho_de_peso_titulo">Ganho de Peso</string>
    <string name="ganho_de_peso_topico">Engordamento</string>
    <string name="ganho_de_peso">

                    <![CDATA[

                        <h4><font color="#8e376d"><strong> Quantos quilos posso aumentar durante a gestação ? </strong></font></h4>
                        <p> O enfermeiro fará um cálculo durante a consulta de pré-natal. Mas a regra é: </p>
                        <p> <strong> • </strong> Gestantes que têm o peso adequado podem aumentar entre 11 quilos e meio à 16 quilos; </p>
                        <p> <strong> • </strong> Gestante que são obesas deverão ganhar em torno de 5 à 9 quilos; </p>
                        <p> <strong> • </strong> As gestantes de baixo peso devem ganhar 12,5 à 18 quilos. </p>

                    ]]>

            </string>
    <string name="direitos_mulher_titulo">Direitos da Mulher</string>
    <string name="direitos_mulher_topico">Direitos</string>
    <string name="topico_parto">Parto…</string>
    <string name="descricao_parto">

            <![CDATA[

                <h4><font color="#8e376d"><strong> Quais os benefícios do parto normal humanizado para a mulher e o bebê ? </strong></font></h4>
                <p> <strong> 1. </strong> Rápida recuperação da mulher facilitando o cuidado com o bebê após o parto; </p>
                <p> <strong> 2. </strong> Menor risco de complicações, o que favorece o contato pele a pele imediato com o bebê e o aleitamento materno imediato; </p>
                <p> <strong> 3. </strong> Menor risco de complicações na próxima gravidez. </p>

                <br/>

                <h4><font color="#8e376d"><strong> Qual a melhor posição para parir ? </strong></font></h4>
                <p> A melhor posição para parir é a vertical. Assim a mulher pode ficar em pé, de cócoras, de quatro. A mulher é a protagonista do parto, logo escolhe a posição que mais lhe traga conforto. </p>

            ]]>

        </string>
    <string name="topico_boas_praticas_parto">Boas Práticas do Parto e Nascimento&#8230;</string>
    <string name="cvg_adicionar">[ADICIONAR]</string>
    <string name="cvg_salvar">salvar</string>
    <string name="cvg_dp_titulo">Dados Pessoais</string>
    <string name="cvg_dp_campo_nome">Nome:\u0020</string>
    <string name="cvg_dp_campo_nome_hint">informe aqui o nome…</string>
    <string name="cvg_dp_campo_nascimento">Data de nascimento:\u0020</string>
    <string name="cvg_dp_campo_idade">Idade:\u0020</string>
    <string name="cvg_dp_campo_endereco">Endereço:\u0020</string>
    <string name="cvg_dp_campo_endereco_hint">informe aqui o endereço…</string>
    <string name="cvg_dp_campo_companheiro">Companheiro:\u0020</string>
    <string name="cvg_dp_campo_companheiro_hint">informe aqui o nome…</string>
    <string name="cvg_do_titulo">Dados Obstétricos</string>
    <string name="cvg_do_campo_dum_cadastro">DUM (Data da Última Menstruação):</string>
    <string name="cvg_do_campo_dpp_cadastro">DPP (Data Provável do Parto):</string>
</resources>