<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context="com.scriptpoin.gestacaosaudavel.gestacao.trimestre.PrimeiroTrimestreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="25dp">

        <ImageView
            android:id="@+id/ivPerguntas"
            android:layout_width="325dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tvTempoApGrValor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/trimestre_2_imagem"
            android:src="@drawable/trimestre2" />

        <TextView
            android:id="@+id/tvTempoApGrTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tempo_proximado_gravidez"
            android:textColor="#b7448b"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTempoApGrValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTempoApGrTitulo"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/trimestre_2_tempo_proximado"
            android:textColor="#C586AE"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/llTempoApGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPerguntas"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/tempo_proximado_gravidez_semanas"
                android:textAlignment="center"
                android:textColor="#b7448b"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/tempo_proximado_gravidez_mes"
                android:textAlignment="center"
                android:textColor="#b7448b"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTempoApGrMes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTempoApGr"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/trimestre_2_mes_4"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/trimestre_mes_4"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTempoApGrMes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTempoApGrMes1"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/trimestre_2_mes_5"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/trimestre_mes_5"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTempoApGrMes3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTempoApGrMes2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/trimestre_2_mes_6"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/trimestre_mes_6"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPerguntasTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTempoApGrMes3"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/gravidez_duvidas_frequentes"
            android:textColor="#b7448b"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/llPerguntasTrimestre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPerguntasTitulo"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical" />


    </RelativeLayout>

</ScrollView>
