<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context="com.scriptpoin.gestacaosaudavel.caderneta.dados_obstetricos.DadosObstetricosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/cvg_do_titulo"
            android:textColor="#b7448b"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cvg_do_campo_dum_cadastro"
            android:textColor="#4F4F4F"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/doTvDpDum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/cvg_adicionar"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cvg_do_campo_dpp_cadastro"
            android:textColor="#4F4F4F"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/doTvDpDpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/cvg_adicionar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/doBtSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_bt_roxo"
            android:text="@string/cvg_salvar"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>