<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rosa"
    tools:context="com.scriptpoin.gestacaosaudavel.SobreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/sobre_texto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sobre_texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sobre_texto1"
            android:layout_centerHorizontal="true"
            android:text="@string/app_version"
            android:textColor="#99487e"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/splashScreenLogo"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_below="@+id/sobre_texto2"
            android:layout_marginBottom="23dp"
            android:layout_marginTop="23dp"
            android:contentDescription="@string/logo_imagem_descricao"
            android:src="@drawable/icon_gestacao_saudavel" />

        <TextView
            android:id="@+id/sobre_texto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashScreenLogo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_company"
            android:textColor="#99487e"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sobre_texto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sobre_texto3"
            android:layout_centerHorizontal="true"
            android:text="@string/app_rights"
            android:textColor="#99487e"
            android:textSize="15sp" />

    </RelativeLayout>


</RelativeLayout>
